[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stactools-palsar"
description = "PALSAR/PALSAR-2 Annual Mosaics and Forest/Non-Forest Mosacis"
authors=[{ name = "Alex Mandel", email ="alex@developmentseed.org"}]
keywords =["stactools", "pystac", "catalog", "STAC", "SAR", "PALSAR"]
classifiers =[
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
    ]
license= { text = "Apache 2.0" }
requires-python=">=3.8"
dependencies = ["stactools>=0.5.2","rasterio>=1.3.8","rio-cogeo>=5.0.0","python-dateutil>=2.8.2"]

dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/stactools-packages/stactools-palsar"
repository ="https://github.com/stactools-packages/stactools-palsar.git"
documentation = "https://stactools-palsar.readthedocs.io/en/latest/"
issues = "https://github.com/stactools-packages/palsar/issues"


[project.optional-dependencies]
dev = ["codespell>=2.2.5",
        "coverage>=7.3.1",
        "editorconfig-checker>=2.7.2",
        "flake8>=6.1.0",
        "isort>=5.12.0",
        "jupyter>=1.0.0",
        "mypy>=1.5.1",
        "pylint>=2.17.6",
        "sphinx>=7.2.6",
        "sphinx-autobuild>=2021.3.14",
        "sphinx-click>=5.0.1",
        "sphinxcontrib-fulltoc>=1.2.0",
        "sphinxcontrib-napoleon>=0.7",
        "toml>=0.10.2",
        "types-click>=7.1.8",
        "types-python-dateutil>=2.8.19.14",
        "types-pytz>=2023.3.1.1",
        "yapf>=0.40.2"]

[tool.setuptools.dynamic]
version = { attr = "stactools.palsar.__version__" }
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
